--- a/business_list.html
+++ b/business_list.html
@@ -8,13 +8,13 @@
     <!-- 공통 css -->
     <link rel="stylesheet" type="text/css" href="css/common.css">
     <!-- 운영 숙소 정보 css -->
-    <link rel="stylesheet" type="text/css" href="css/business_info.css">
+    <link rel="stylesheet" type="text/css" href="css/business_list.css">
     <!-- 객실관리, 리뷰 -->
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/select.js"></script>
+    <script src="js/business_list.js"></script>
     <!-- 부트스트랩 input태그 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    
 </head>
 <body>
     <!--건너뛰기 링크-->
@@ -38,7 +38,7 @@
         <!-- contents -->
         <div class="container">
             <main>
-                <div class="row" style="border: 1px solid red;">
+                <div class="row">
                     <!-- background_image-->
                     <div class="col-12">
                         <div id="main_img">
@@ -52,8 +52,8 @@
                         <div id="manage_review_tab">
                             <div class="container text-center">
                                 <div class="row row-cols-auto">
-                                    <div class="col select select1">객실관리</div>
-                                    <div class="col select select2">리뷰</div>
+                                    <div class="col select select1" id="room_mg">객실관리</div>
+                                    <div class="col select select2" id="review">리뷰</div>
                                 </div>
                                 <hr>
                             </div>
@@ -61,19 +61,19 @@
                     </div>
                     <!-- // room management, review -->
 
-                    <!-- romm add, del -->
-                    <div class="col">
+                    <!-- romm add button -->
+                    <div class="col-12">
                         <div id="select_wrap">
                             <div class="select_btn">
                                 <button type="button" class="btn btn-outline-primary btn-sm">객실 추가</button>
-                                <button type="button" class="btn btn-outline-danger btn-sm">객실 삭제</button>
+                                <!--<button type="button" class="btn btn-outline-danger btn-sm">객실 삭제</button> -->
                             </div>
                         </div>
                     </div>
-                    <!-- // romm add, del -->
+                    <!-- // romm add button -->
 
                     <!-- room info -->
-                    <div class="col" id="management">
+                    <div class="col-12" id="management">
                         <table class="table">
                             <thead>
                             <tr>
@@ -81,6 +81,7 @@
                                 <th scope="col">객실 타입</th>
                                 <th scope="col">최대 투숙 가능 인원</th>
                                 <th scope="col">가격</th>
+                                <th scope="col">객실 삭제</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -89,23 +90,47 @@
                                 <td>스탠다드 더블</td>
                                 <td>00명</td>
                                 <td>90,000</td>
+                                <td><button type="button" class="btn btn-outline-danger btn-sm">객실 삭제</button></td>
                             </tr>
                             <tr class="hei">
                                 <th scope="row"><img class="room_pic" src="images/business/Deluxe Twin.jpg"></th>
                                 <td>디럭스 트윈</td>
                                 <td>00명</td>
                                 <td>111,000</td>
+                                <td><button type="button" class="btn btn-outline-danger btn-sm">객실 삭제</button></td>
                             </tr>
                             <tr class="hei">
                                 <th scope="row"><img class="room_pic" src="images/business/suite room.jpg"></th>
                                 <td>스위트</td>
                                 <td>00명</td>
                                 <td>160,000</td>
+                                <td><button type="button" class="btn btn-outline-danger btn-sm">객실 삭제</button></td>
                             </tr>
                             </tbody>
                         </table>
-                    </div>
+                   <!-- </div> -->
                     <!-- // room info -->
+                   <!-- <div class="col-12"> -->
+                        <div id="review_wrap">
+                            <hr>
+                            <div>
+                                <div class="id_date">
+                                    <p class="id_date_1line"><span class="id">아이디</span><span class="rating">★★★★★</span></p>
+                                    <p class="id_date_2line"><span class="date">날짜</span><span class="review_content">내용</span></p>
+                                </div>
+                                <div class="id_date_btn">
+                                    <button type="button" class="btn btn-outline-info btn-sm">답글</button>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="owner">
+                                <p>사장님 답글</p>
+                                <div></div>
+                                <p class="owner_btn"><button type="button" class="btn btn-outline-info btn-sm">저장</button></p>
+                            </div>
+                            <hr>
+                        </div>
+                    </div>
                 </div>
             </main>
         </div>
