--- a/stay_info_test.html
+++ b/stay_info_test.html
@@ -19,6 +19,41 @@
     <link rel="stylesheet" href="css/stay_info_test.css">
     <!-- 부트스트랩 css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- 지도 API -->
+    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=osx0ds2lep"></script>
+
+    <script>
+       /* $(function() {
+            $('#menu > div').mouseover(function() {
+                $(this).css("font-weight", "bold");
+            });
+            $('#menu > div').mouseleave(function() {
+                $(this).css("font-weight", "normal");
+            });
+        });*/
+        $(function() {
+            $('#detail').click(function() {
+                $('#click_detail').show().siblings('div').hide();
+                $('#menu > div').css("font-weight", "normal");
+                $('#detail').css("font-weight", "bold");
+                //$('#detail').css("color", "#48a9ed");
+            })
+        });
+        $(function() {
+            $('#place').click(function() {
+                $('#click_place').show().siblings('div').hide();
+                $('#menu > div').css("font-weight", "normal");
+                $('#place').css("font-weight", "bold");
+            })
+        });
+        $(function() {
+            $('#review').click(function() {
+                $('#click_review').show().siblings('div').hide();
+                $('#menu > div').css("font-weight", "normal");
+                $('#review').css("font-weight", "bold");
+            })
+        });
+    </script>
 
 </head>
 <body>
@@ -80,7 +115,7 @@
             <!-- 숙소상세, 위치, 후기 메뉴-->
             <div class="col12" id="select_menu">
                 <div class="container text-center">
-                    <div class="row row-cols-auto">
+                    <div class="row row-cols-auto" id="menu">
                         <div class="col hover" id="detail">객실 상세</div>
                         <div class="col hover" id="place">위치</div>
                         <div class="col hover" id="review">후기</div>
@@ -91,52 +126,90 @@
 
             <!-- 하단 내용 -->
             <div class="col12" id="stay_contents_area" >
-                <div class="card mb-3" id="hotel_room_wrap" >
-                    <div class="row g-0 room_info">
-                        <div class="col-md-4 room_info_img">
-                            <img src="images/stay_info/double.jpg" class="img-fluid " alt="double room">
+                <!-- 객실 상세 -->
+                <div id="click_detail">
+                    <div class="card mb-3 hotel_room_wrap">
+                        <div class="row g-0 room_info">
+                            <div class="col-md-5 room_info_img">
+                                <img src="images/stay_info/double.jpg" class="img-fluid " alt="double room">
+                            </div>
+                            <div class="col-md-7">
+                                <div id="room_info_content1" class="card-body room_info_content">
+                                    <h5 class="card-title">스탠다드 더블룸</h5>
+                                    <p class="card-text">가격<span>ㅇㅇㅇㅇ원 / 1박</span></p>
+                                    <p id="pay_btn1" class="card-text"><button type="button" class="btn btn-outline-primary btn-sm">예약하기</button></p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-md-8">
-                            <div id="room_info_content1" class="card-body room_info_content">
-                                <h5 class="card-title">스탠다드 더블룸</h5>
-                                <p class="card-text">가격<span>ㅇㅇㅇㅇ원 / 1박</span></p>
-                                <p id="pay_btn1" class="card-text"><button type="button" class="btn btn-outline-primary btn-sm">예약하기</button></p>
+                    </div>
+                    <div class="card mb-3 hotel_room_wrap">
+                        <div class="row g-0 room_info">
+                            <div class="col-md-5 room_info_img">
+                                <img src="images/stay_info/Deluxe Twin.jpg" class="img-fluid" alt="Deluxe room">
+                            </div>
+                            <div class="col-md-7">
+                                <div id="room_info_content2" class="card-body room_info_content">
+                                    <h5 class="card-title">디럭스 트윈룸</h5>
+                                    <p class="card-text">가격<span>ㅇㅇㅇㅇ원 / 1박</span></p>
+                                    <p id="pay_btn2" class="card-text"><button type="button" class="btn btn-outline-primary btn-sm">예약하기</button></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3 hotel_room_wrap">
+                        <div class="row g-0 room_info">
+                            <div class="col-md-5 room_info_img">
+                                <img src="images/stay_info/suite room.jpg" class="img-fluid" alt="suite room">
+                            </div>
+                            <div class="col-md-7">
+                                <div id="room_info_content3" class="card-body room_info_content">
+                                    <h5 class="card-title">스위트룸</h5>
+                                    <p class="card-text">가격<span>ㅇㅇㅇㅇ원 / 1박</span></p>
+                                    <p id="pay_btn3" class="card-text"><button type="button" class="btn btn-outline-primary btn-sm">예약하기</button></p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3" id="hotel_room_wrap" >
-                    <div class="row g-0 room_info">
-                        <div class="col-md-4 room_info_img">
-                            <img src="images/stay_info/Deluxe Twin.jpg" class="img-fluid" alt="Deluxe room">
-                        </div>
-                        <div class="col-md-8">
-                            <div id="room_info_content2" class="card-body room_info_content">
-                                <h5 class="card-title">디럭스 트윈룸</h5>
-                                <p class="card-text">가격<span>ㅇㅇㅇㅇ원 / 1박</span></p>
-                                <p id="pay_btn2" class="card-text"><button type="button" class="btn btn-outline-primary btn-sm">예약하기</button></p>
-                            </div>
-                        </div>
+                <!-- // 객실 상세 -->
+
+                <!-- 위치 -->
+                <div id="click_place">
+                    <div id="map"></div>
+                </div>
+                <!-- // 위치 -->
+
+                <!-- 리뷰 -->
+                <div id="click_review">
+                    <div class="reviews">
+                        <p class="review_info"><span>아이디</span><span>★★★★★</span></p>
+                        <p class="review_date"><span>날짜</span><span>내용</span></p>
+                    </div>
+                    <div class="reviews">
+                        <p class="review_info"><span>아이디</span><span>★★★★★</span></p>
+                        <p class="review_date"><span>날짜</span><span>내용</span></p>
                     </div>
                 </div>
-                <div class="card mb-3" id="hotel_room_wrap" >
-                    <div class="row g-0 room_info">
-                        <div class="col-md-4 room_info_img">
-                            <img src="images/stay_info/suite room.jpg" class="img-fluid" alt="suite room">
-                        </div>
-                        <div class="col-md-8">
-                            <div id="room_info_content3" class="card-body room_info_content">
-                                <h5 class="card-title">스위트룸</h5>
-                                <p class="card-text">가격<span>ㅇㅇㅇㅇ원 / 1박</span></p>
-                                <p id="pay_btn3" class="card-text"><button type="button" class="btn btn-outline-primary btn-sm">예약하기</button></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <!-- // 리뷰 -->
             </div>
             <!-- // 하단 내용 -->
         </div>
     </div>
 </div>
+<script>
+    // 16라인  잠실 롯데월드 위치 지도
+    var mapOptions = {
+        center: new naver.maps.LatLng(37.5112, 127.0981), 
+        zoom: 13
+    };
+
+    var map = new naver.maps.Map('map', mapOptions);
+    
+    // 잠실 롯데월드 위치의 마커 표시
+    var marker = new naver.maps.Marker({
+                position: new naver.maps.LatLng(37.5112, 127.0981),
+                map: map
+    });
+</script>
 </body>
 </html>
