메인페이지 수정

--- a/index.html
+++ b/index.html
@@ -67,16 +67,20 @@
         </header>
         <!-- // header 영역 -->
 
+        <div id="main_img">
+            <img src="images/Home/mainBg/pexels-jimmy-teoh-1010657.jpg" alt="main_img">
+        </div>
+
         <!-- contents -->
-        <div class="container">
+        <div class="container" id="container">
             <main>
                 <div class="row">
                     <!-- background_image-->
-                    <div class="col-12">
+                    <!-- <div class="col-12">
                         <div id="main_img">
                             <img src="images/Home/mainBg/pexels-jimmy-teoh-1010657.jpg" alt="main_img">
                         </div>
-                    </div>
+                    </div> -->
                     <!-- // background_image-->
 
                     <!-- icon_controller , date -->
