--- a/stay_info.html
+++ b/stay_info.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>숙소 정보</title>
     <!--스와이퍼-->
     <link rel="stylesheet" href="css/stay_info_swiper.css">
     <link rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
@@ -13,11 +13,48 @@
     <script defer src="js/stay_info_swiper.js"></script>
     <!--아이콘-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <!--공통 css-->
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/stay_info.css">
+    <!-- 숙소정보 페이지 css -->
+    <link rel="stylesheet" href="css/stay_info_test.css">
+    <!-- 부트스트랩 css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- 지도 API -->
+    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=osx0ds2lep"></script>
 
-    <script src="js/stay_info.js"></script>
+    <script>
+       /* $(function() {
+            $('#menu > div').mouseover(function() {
+                $(this).css("font-weight", "bold");
+            });
+            $('#menu > div').mouseleave(function() {
+                $(this).css("font-weight", "normal");
+            });
+        });*/
+        $(function() {
+            $('#detail').click(function() {
+                $('#click_detail').show().siblings('div').hide();
+                $('#menu > div').css("font-weight", "normal");
+                $('#detail').css("font-weight", "bold");
+                //$('#detail').css("color", "#48a9ed");
+            })
+        });
+        $(function() {
+            $('#place').click(function() {
+                $('#click_place').show().siblings('div').hide();
+                $('#menu > div').css("font-weight", "normal");
+                $('#place').css("font-weight", "bold");
+            })
+        });
+        $(function() {
+            $('#review').click(function() {
+                $('#click_review').show().siblings('div').hide();
+                $('#menu > div').css("font-weight", "normal");
+                $('#review').css("font-weight", "bold");
+            })
+        });
+    </script>
+
 </head>
 <body>
     <!--건너뛰기 링크-->
@@ -27,9 +64,9 @@
     <!--wraper 시작-->
     <div id="wrapper">
         <!--컨텐츠 영역-->
-        <div id="contents_area">
+        <div id="contents_area" class="row">
             <!-- 슬라이드 , 숙소정보 -->
-            <div class="stay_info_area">
+            <div class="stay_info_area col">
                 <div class="stay_image_swiper_area slide">
                     <div
                     style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff"
@@ -75,64 +112,104 @@
             </div>
             <!-- // 슬라이드 , 숙소정보 -->
 
-            <!-- 하단 내용 -->
-            <div class="stay_contents_area">
-                <section class="stay_contents rooms_detail_area" id="rooms_detail_area">
-                    <h3 class="stay_content_title" id="room_detail_title">
-                        <a href="#rooms_detail_area" onclick="return false;">숙소상세</a>
-                    </h3>
-                    <!--방 하나의 정보-->
-                    <div class="room_detail_area">
-                        <div class="room_image">
-                            <!--
-                                <img src="" alt="예약한 방 사진">
-                            -->
-                        </div>
-                        <div class="room_content">
-                            <div class="room_l">
-                                <p class="room_name">방 이름</p>
-                                <p class="price">
-                                    <span>가격</span>
-                                    <span id="price"></span>
-                                </p>
-                            </div>
-                            <div class="review_cancle_area">
-                                <button type="button" class="btn_room_book"> 예약하기 (총 <span id="total_price"></span>)</button>
-                            </div>
-                        </div>
-                    </div> 
-                </section>
-                <section class="stay_contents stay_position_area" id="stay_position_area">
-                    <h3 class="stay_content_title" id="stay_position_title">
-                        <a href="#stay_position_area" onclick="return false;">위치</a>
-                    </h3>
+            <!-- 숙소상세, 위치, 후기 메뉴-->
+            <div class="col12" id="select_menu">
+                <div class="container text-center">
+                    <div class="row row-cols-auto" id="menu">
+                        <div class="col hover" id="detail">객실 상세</div>
+                        <div class="col hover" id="place">위치</div>
+                        <div class="col hover" id="review">후기</div>
+                    </div>
+                </div>
+            </div>
+            <!-- // 숙소상세, 위치, 후기 메뉴-->
 
-                </section>
-                <section class="stay_contents stay_review_area" id="stay_review_area">
-                    <h3 class="stay_content_title" id="stay_review_title">
-                        <a href="#stay_review_area" onclick="return false;">후기</a>
-                    </h3>
-                    <div class="review_area">
-                        <div class="id_date_area">
-                            <p class="id">아이디</p>
-                            <p class="date">날짜</p>
-                        </div>
-                        <div class="star_content_area">
-                            <p class="mb-3">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                            </p>
-                            <textarea name="review_content" id="review_content" cols="30" rows="10">리뷰 내용</textarea>
+            <!-- 하단 내용 -->
+            <div class="col12" id="stay_contents_area" >
+                <!-- 객실 상세 -->
+                <div id="click_detail">
+                    <div class="card mb-3 hotel_room_wrap">
+                        <div class="row g-0 room_info">
+                            <div class="col-md-5 room_info_img">
+                                <img src="images/stay_info/double.jpg" class="img-fluid " alt="double room">
+                            </div>
+                            <div class="col-md-7">
+                                <div id="room_info_content1" class="card-body room_info_content">
+                                    <h5 class="card-title">스탠다드 더블룸</h5>
+                                    <p class="card-text">가격<span>ㅇㅇㅇㅇ원 / 1박</span></p>
+                                    <p id="pay_btn1" class="card-text"><button type="button" class="btn btn-outline-primary btn-sm">예약하기</button></p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </section>
+                    <div class="card mb-3 hotel_room_wrap">
+                        <div class="row g-0 room_info">
+                            <div class="col-md-5 room_info_img">
+                                <img src="images/stay_info/Deluxe Twin.jpg" class="img-fluid" alt="Deluxe room">
+                            </div>
+                            <div class="col-md-7">
+                                <div id="room_info_content2" class="card-body room_info_content">
+                                    <h5 class="card-title">디럭스 트윈룸</h5>
+                                    <p class="card-text">가격<span>ㅇㅇㅇㅇ원 / 1박</span></p>
+                                    <p id="pay_btn2" class="card-text"><button type="button" class="btn btn-outline-primary btn-sm">예약하기</button></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3 hotel_room_wrap">
+                        <div class="row g-0 room_info">
+                            <div class="col-md-5 room_info_img">
+                                <img src="images/stay_info/suite room.jpg" class="img-fluid" alt="suite room">
+                            </div>
+                            <div class="col-md-7">
+                                <div id="room_info_content3" class="card-body room_info_content">
+                                    <h5 class="card-title">스위트룸</h5>
+                                    <p class="card-text">가격<span>ㅇㅇㅇㅇ원 / 1박</span></p>
+                                    <p id="pay_btn3" class="card-text"><button type="button" class="btn btn-outline-primary btn-sm">예약하기</button></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- // 객실 상세 -->
+
+                <!-- 위치 -->
+                <div id="click_place">
+                    <div id="map"></div>
+                </div>
+                <!-- // 위치 -->
+
+                <!-- 리뷰 -->
+                <div id="click_review">
+                    <div class="reviews">
+                        <p class="review_info"><span>아이디</span><span>★★★★★</span></p>
+                        <p class="review_date"><span>날짜</span><span>내용</span></p>
+                    </div>
+                    <div class="reviews">
+                        <p class="review_info"><span>아이디</span><span>★★★★★</span></p>
+                        <p class="review_date"><span>날짜</span><span>내용</span></p>
+                    </div>
+                </div>
+                <!-- // 리뷰 -->
             </div>
             <!-- // 하단 내용 -->
         </div>
     </div>
 </div>
+<script>
+    // 16라인  잠실 롯데월드 위치 지도
+    var mapOptions = {
+        center: new naver.maps.LatLng(37.5112, 127.0981), 
+        zoom: 13
+    };
+
+    var map = new naver.maps.Map('map', mapOptions);
+    
+    // 잠실 롯데월드 위치의 마커 표시
+    var marker = new naver.maps.Marker({
+                position: new naver.maps.LatLng(37.5112, 127.0981),
+                map: map
+    });
+</script>
 </body>
 </html>
