--- a/stay_info.html
+++ b/stay_info.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>숙소 정보</title>
-    <!--스와이퍼-->
-    <link rel="stylesheet" href="css/stay_info_swiper.css">
-    <link rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
-    <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-    <script defer src="js/stay_info_swiper.js"></script>
-    <!--아이콘-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--공통 css-->
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/common/common.css">
     <!-- 숙소정보 페이지 css -->
-    <link rel="stylesheet" href="css/stay_info_test.css">
+    <link rel="stylesheet" href="css/stay_info/stay_info.css">
+    <!-- 스와이퍼 css, js -->
+    <link rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="css/stay_info/stay_info_swiper.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script defer src="js/stay_info/stay_info_swiper.js"></script>
+    <!-- 아이콘 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- 부트스트랩 css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <!-- 지도 API -->
-    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=osx0ds2lep"></script>
+    <!-- 카카오 지도 API -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6a6fd114afe115e9bc87d52356b640b9"></script>
 
     <script>
        /* $(function() {
@@ -67,7 +67,7 @@
         <div id="contents_area" class="row">
             <!-- 슬라이드 , 숙소정보 -->
             <div class="stay_info_area col">
-                <div class="stay_image_swiper_area slide">
+                <div class="stay_image_swiper_area" id="slide">
                     <div
                     style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff"
                     class="stay_image_swiper stay_image_swiper_top">
@@ -135,8 +135,11 @@
                             </div>
                             <div class="col-md-7">
                                 <div id="room_info_content1" class="card-body room_info_content">
-                                    <h5 class="card-title">스탠다드 더블룸</h5>
-                                    <p class="card-text">가격<span>ㅇㅇㅇㅇ원 / 1박</span></p>
+                                    <h4 class="card-title">스탠다드 더블룸</h4>
+                                    <p class="card-text">투숙 가능인원 &nbsp&nbsp2명</p>
+                                    <p class="card-text amenitie">편의시설 > <span>TV, 에어컨, 냉장고, 드라이기, 욕실용품</span></p>
+                                    <hr>
+                                    <p class="card-text price">가격<span>ㅇㅇㅇㅇ원 / 1박</span></p>
                                     <p id="pay_btn1" class="card-text"><button type="button" class="btn btn-outline-primary btn-sm">예약하기</button></p>
                                 </div>
                             </div>
@@ -149,8 +152,11 @@
                             </div>
                             <div class="col-md-7">
                                 <div id="room_info_content2" class="card-body room_info_content">
-                                    <h5 class="card-title">디럭스 트윈룸</h5>
-                                    <p class="card-text">가격<span>ㅇㅇㅇㅇ원 / 1박</span></p>
+                                    <h4 class="card-title">디럭스 트윈룸</h4>
+                                    <p class="card-text">투숙 가능인원 &nbsp&nbsp3명</p>
+                                    <p class="card-text amenitie">편의시설 > <span>TV, 에어컨, 냉장고, 드라이기, 욕실용품</span></p>
+                                    <hr>
+                                    <p class="card-text price">가격<span>ㅇㅇㅇㅇ원 / 1박</span></p>
                                     <p id="pay_btn2" class="card-text"><button type="button" class="btn btn-outline-primary btn-sm">예약하기</button></p>
                                 </div>
                             </div>
@@ -163,8 +169,11 @@
                             </div>
                             <div class="col-md-7">
                                 <div id="room_info_content3" class="card-body room_info_content">
-                                    <h5 class="card-title">스위트룸</h5>
-                                    <p class="card-text">가격<span>ㅇㅇㅇㅇ원 / 1박</span></p>
+                                    <h4 class="card-title">스위트룸</h4>
+                                    <p class="card-text">투숙 가능인원 &nbsp&nbsp4명</p>
+                                    <p class="card-text amenitie">편의시설 > <span>TV, 에어컨, 냉장고, 드라이기, 욕실용품</span></p>
+                                    <hr>
+                                    <p class="card-text price">가격<span>ㅇㅇㅇㅇ원 / 1박</span></p>
                                     <p id="pay_btn3" class="card-text"><button type="button" class="btn btn-outline-primary btn-sm">예약하기</button></p>
                                 </div>
                             </div>
@@ -195,21 +204,15 @@
             <!-- // 하단 내용 -->
         </div>
     </div>
-</div>
-<script>
-    // 16라인  잠실 롯데월드 위치 지도
-    var mapOptions = {
-        center: new naver.maps.LatLng(37.5112, 127.0981), 
-        zoom: 13
-    };
-
-    var map = new naver.maps.Map('map', mapOptions);
-    
-    // 잠실 롯데월드 위치의 마커 표시
-    var marker = new naver.maps.Marker({
-                position: new naver.maps.LatLng(37.5112, 127.0981),
-                map: map
-    });
-</script>
+    <script>
+        var mapContainer = document.getElementById('map'); // 지도를 표시할 div 
+            mapOption = { 
+                center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+                level: 3 // 지도의 확대 레벨
+            };
+        
+        // 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
+        var map = new kakao.maps.Map(mapContainer, mapOption); 
+    </script>
 </body>
 </html>
