메인페이지

--- a/index.html
+++ b/index.html
@@ -455,6 +455,6 @@
         <!-- // footer -->
     </div>
     <!-- // wraper -->
-    <script src="js/datepicker.js"></script>
+    <script src="js/index/datepicker.js"></script>
 </body>
 </html>
