운영 숙소 정보

--- a/business_list.html
+++ b/business_list.html
@@ -6,15 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>운영 숙소 정보</title>
     <!-- 공통 css -->
-    <link rel="stylesheet" type="text/css" href="css/common.css">
+    <link rel="stylesheet" type="text/css" href="css/common/common.css">
     <!-- 운영 숙소 정보 css -->
-    <link rel="stylesheet" type="text/css" href="css/business_list.css">
+    <link rel="stylesheet" type="text/css" href="css/business_list/business_list.css">
     <!-- 객실관리, 리뷰 -->
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/business_list.js"></script>
+    <script src="js/common/jquery-3.6.0.min.js"></script>
+    <script src="js/business_list/business_list.js"></script>
     <!-- 부트스트랩 input태그 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     
+    <script>
+        $(function() {
+            // 객실 삭제 버튼 클릭시
+            $('#room_del_click').click(function() {
+                $('.del_click').css("display", "inline-block");
+
+                $('#del_click').css("display", "inline-block");
+                $('#canccle_click').css("display", "inline-block");
+
+                $('#add_click').css("display", "none");
+                $('#room_del_click').css("display", "none");
+            });
+
+            // 취소하기 버튼 클릭시
+            $('#canccle_click').click(function() {
+                $('.del_click').css("display", "none");
+
+                $('#del_click').css("display", "none");
+                $('#canccle_click').css("display", "none");
+
+                $('#add_click').css("display", "inline-block");
+                $('#room_del_click').css("display", "inline-block");
+            });
+        });
+    </script>
 </head>
 <body>
     <!--건너뛰기 링크-->
@@ -64,9 +89,11 @@
                     <!-- romm add button -->
                     <div class="col-12">
                         <div id="select_wrap">
-                            <div class="select_btn">
-                                <button type="button" class="btn btn-outline-primary btn-sm">객실 추가</button>
-                                <!--<button type="button" class="btn btn-outline-danger btn-sm">객실 삭제</button> -->
+                            <div class="select_btn" id="tete">
+                                <button type="button" class="btn btn-outline-danger btn-sm" id="del_click">삭제하기</button>
+                                <button type="button" class="btn btn-outline-secondary btn-sm" id="canccle_click">취소하기</button>
+                                <button type="button" class="btn btn-outline-primary btn-sm" id="add_click">객실 추가</button>
+                                <button type="button" class="btn btn-outline-danger btn-sm" id="room_del_click">객실 삭제</button>
                             </div>
                         </div>
                     </div>
@@ -81,7 +108,7 @@
                                 <th scope="col">객실 타입</th>
                                 <th scope="col">최대 투숙 가능 인원</th>
                                 <th scope="col">가격</th>
-                                <th scope="col">객실 삭제</th>
+                                <th scope="col" class="del_click">객실 삭제</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -90,21 +117,21 @@
                                 <td>스탠다드 더블</td>
                                 <td>00명</td>
                                 <td>90,000</td>
-                                <td><button type="button" class="btn btn-outline-danger btn-sm">객실 삭제</button></td>
+                                <td><input class="form-check-input del_click" type="checkbox" value="" id="flexCheckDefault"></td>
                             </tr>
                             <tr class="hei">
                                 <th scope="row"><img class="room_pic" src="images/business/Deluxe Twin.jpg"></th>
                                 <td>디럭스 트윈</td>
                                 <td>00명</td>
                                 <td>111,000</td>
-                                <td><button type="button" class="btn btn-outline-danger btn-sm">객실 삭제</button></td>
+                                <td><input class="form-check-input del_click" type="checkbox" value="" id="flexCheckDefault"></td>
                             </tr>
                             <tr class="hei">
                                 <th scope="row"><img class="room_pic" src="images/business/suite room.jpg"></th>
                                 <td>스위트</td>
                                 <td>00명</td>
                                 <td>160,000</td>
-                                <td><button type="button" class="btn btn-outline-danger btn-sm">객실 삭제</button></td>
+                                <td><input class="form-check-input del_click" type="checkbox" value="" id="flexCheckDefault"></td>
                             </tr>
                             </tbody>
                         </table>
