--- a/stay_book.html
+++ b/stay_book.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>예약자,결제 정보</title>
     <!--공통 css-->
-    <link rel="stylesheet" type="text/css" href="css/common.css">
+    <link rel="stylesheet" type="text/css" href="css/common/common.css">
     <!--결제페이지 css-->
-    <link rel="stylesheet" type="text/css" href="css/stay_book.css">
+    <link rel="stylesheet" type="text/css" href="css/stay_book/stay_book.css">
     <!-- 약관 동의 펼치기-->
-    <script src="js/agree_content.js"></script>
+    <script src="js/stay_book/agree_content.js"></script>
     <!-- 부트스트랩 input태그, 약관 동의창 css, js -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
