운영 숙소 정보 페이지

--- a/business_list.html
+++ b/business_list.html
@@ -37,6 +37,9 @@
 
                 $('#add_click').css("display", "inline-block");
                 $('#room_del_click').css("display", "inline-block");
+
+                // 체크 된 체크박스 해제
+                $(":checkbox").prop("checked",false);
             });
         });
     </script>
