운영숙소정보 페이지

--- a/business_list.html
+++ b/business_list.html
@@ -10,8 +10,8 @@
     <!-- 운영 숙소 정보 css -->
     <link rel="stylesheet" type="text/css" href="css/business_list/business_list.css">
     <!-- 객실관리, 리뷰 -->
-    <script src="js/common/jquery-3.6.0.min.js"></script>
-    <script src="js/business_list/business_list.js"></script>
+    <script src="js/stay/jquery-3.6.0.min.js"></script>
+    <script src="js/business/business_list.js"></script>
     <!-- 부트스트랩 input태그 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     
