메인페이지

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <!-- 메인페이지 css -->
     <link rel="stylesheet" type="text/css" href="css/index/index.css">
     <!-- 인기 숙소 -->
-    <script src="js/common/jquery-3.6.0.min.js"></script>
-    <script src="js/index/best_room_select.js"></script>
+    <script src="js/stay/jquery-3.6.0.min.js"></script>
+    <script src="js/stay/best_room_select.js"></script>
     <!-- 달력 -->
     <link rel="stylesheet" href="css/index/datepicker.min.css">
-    <script src="js/index/datepicker.min.js"></script>
-    <script src="js/index/datepicker.ko.js"></script>
+    <script src="js/stay/datepicker.min.js"></script>
+    <script src="js/stay/datepicker.ko.js"></script>
     <!-- 아이콘 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
     <!-- 스크롤시 상단바 -->
-    <!-- <script src="js/index/scroll.js"></script>
+    <!-- <script src="js/stay/scroll.js"></script>
     <link rel="stylesheet" type="text/css" href="css/index/scroll.css"> -->
 
     <!-- 부트스트랩 -->
@@ -455,6 +455,6 @@
         <!-- // footer -->
     </div>
     <!-- // wraper -->
-    <script src="js/index/datepicker.js"></script>
+    <script src="js/stay/datepicker.js"></script>
 </body>
 </html>
