객실관리부분 객실 잘림 수정

--- a/business_list.html
+++ b/business_list.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>운영 숙소 정보</title>
     <!-- 공통 css -->
-    <link rel="stylesheet" type="text/css" href="css/common/common.css">
+    <link rel="stylesheet" type="text/css" href="css/stay/common.css">
     <!-- 운영 숙소 정보 css -->
-    <link rel="stylesheet" type="text/css" href="css/business_list/business_list.css">
+    <link rel="stylesheet" type="text/css" href="css/business/business_list.css">
     <!-- 객실관리, 리뷰 -->
     <script src="js/stay/jquery-3.6.0.min.js"></script>
     <script src="js/business/business_list.js"></script>
