--- a/stay_book.html
+++ b/stay_book.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>예약자,결제 정보</title>
     <!--공통 css-->
-    <link rel="stylesheet" type="text/css" href="css/common/common.css">
+    <link rel="stylesheet" type="text/css" href="css/stay/common.css">
     <!--결제페이지 css-->
-    <link rel="stylesheet" type="text/css" href="css/stay_book/stay_book.css">
+    <link rel="stylesheet" type="text/css" href="css/stay/stay_book.css">
     <!-- 약관 동의 펼치기-->
     <script src="js/stay/agree_content.js"></script>
     <!-- 부트스트랩 input태그, 약관 동의창 css, js -->
