--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>메인페이지</title>
     <!-- 공통 css -->
-    <link rel="stylesheet" type="text/css" href="css/common/common.css">
+    <link rel="stylesheet" type="text/css" href="css/stay/common.css">
     <!-- 검색 css -->
-    <link rel="stylesheet" href="css/index/search_common.css">
+    <link rel="stylesheet" href="css/stay/search_common.css">
     <!-- 메인페이지 css -->
-    <link rel="stylesheet" type="text/css" href="css/index/index.css">
+    <link rel="stylesheet" type="text/css" href="css/stay/index.css">
     <!-- 인기 숙소 -->
     <script src="js/stay/jquery-3.6.0.min.js"></script>
     <script src="js/stay/best_room_select.js"></script>
     <!-- 달력 -->
-    <link rel="stylesheet" href="css/index/datepicker.min.css">
+    <link rel="stylesheet" href="css/stay/datepicker.min.css">
     <script src="js/stay/datepicker.min.js"></script>
     <script src="js/stay/datepicker.ko.js"></script>
     <!-- 아이콘 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
     <!-- 스크롤시 상단바 -->
     <!-- <script src="js/stay/scroll.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/index/scroll.css"> -->
+    <link rel="stylesheet" type="text/css" href="css/stay/scroll.css"> -->
 
     <!-- 부트스트랩 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
