이벤트 이미지 추가

--- a/index.html
+++ b/index.html
@@ -397,30 +397,34 @@
                         </div>
                         <!-- 우측 인기차트? 영역 -->
                         <div class="col-md-4">
-                            <div class="position-sticky" style="top: 2rem;">
-                                <div class="p-4 mb-3 rounded" id="place">
-                                    <h5><span class="fa fa-thumbs-up"></span> 인기! 관광명소</h5>
+                            <div class="position-sticky" style="top: 2rem;" id="event_wrap">
+                                <div class="mb-3 rounded" id="place">
+                                    <h5>이벤트</h5>
+                                    <img src="images/Home/event/event1.png" alt="event">
+                                    <!-- <h5><span class="fa fa-thumbs-up"></span> 인기! 관광명소</h5>
                                     <p>전주 한옥마을</p>
                                     <p>경기전</p>
                                     <p>전주 전동성당</p>
                                     <p>오목대 이목대</p>
-                                    <p>남부시장</p>
+                                    <p>남부시장</p> -->
                                 </div>
-                                <div class="p-4" id="history">
-                                    <h5><span class="fa fa-utensils"></span> 추천! 인기맛집</h5>
+                                <div class="mb-3" id="history">
+                                    <img src="images/Home/event/event2.png" alt="event">
+                                   <!-- <h5><span class="fa fa-utensils"></span> 추천! 인기맛집</h5>
                                     <p>연식당</p>
                                     <p>큰가마하누소</p>
                                     <p>한국집</p>
                                     <p>교동석갈비</p>
-                                    <p>고궁</p>
+                                    <p>고궁</p> -->
                                 </div>
-                                <div class="p-4" id="landmark">
-                                    <h5>즐길거리 & 랜드마크</h5>
+                                <div class="mb-3" id="landmark">
+                                    <img src="images/Home/event/event3.png" alt="event">
+                                   <!-- <h5>즐길거리 & 랜드마크</h5>
                                     <p>전주 한옥마을</p>
                                     <p>학인당</p>
                                     <p>자만 벽화마을</p>
                                     <p>전주소리문화관</p>
-                                    <p>전주한옥생활체험관</p>
+                                    <p>전주한옥생활체험관</p> -->
                                 </div>
                             </div>
                         </div>
