--- a/stay_book.html
+++ b/stay_book.html
@@ -9,8 +9,12 @@
     <link rel="stylesheet" type="text/css" href="css/stay/common.css">
     <!--결제페이지 css-->
     <link rel="stylesheet" type="text/css" href="css/stay/stay_book.css">
+    <!-- 결제 페이지 js  빈칸시 alert -->
+    <script src="js/stay/stay_book.js"></script>
     <!-- 약관 동의 펼치기-->
     <script src="js/stay/agree_content.js"></script>
+    <!-- 아이콘 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
     <!-- 부트스트랩 input태그, 약관 동의창 css, js -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
@@ -35,18 +39,20 @@
         </header>
         <!--헤더 영역 종료-->
 
-        <div id="contentsArea">
+        <div id="contentsArea" name="test">
             <div id="info">
                 <!-- 좌측 예약자 정보 란 -->
                 <div class="reserve_info">
                     <h2>예약자 정보</h2>
-                    <form action="login.jsp" method="post" id="login_form">
+                    <form action="login.jsp" method="post" id="login_form" name="login_form">
                         <div class="name">
                             <label for="name">이름</label>
+                            <i class="far fa-user"></i>
                             <input type="name" id="name" name="name" required autofocus>
                         </div>
                         <div class="tel">
                             <label for="tel">전화번호<span>"-"를 제외한 연락처를 입력해주세요.</span></label>
+                            <i class="fa fa-phone"></i>
                             <input type="tel" id="tel" name="tel" required>
                         </div>
                     </form>
@@ -174,7 +180,7 @@
                     </div>
                 </div>
                 <div class="room_pay">
-                    <button type="button" class="btn btn-outline-primary btn-sm">결제하기</button>
+                    <button type="button" class="btn btn-outline-primary btn-sm" onclick="loginCheck()">결제하기</button>
                 </div>
             </div>
             
