--- a/login.html
+++ b/login.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STAYING 로그인</title>
+    <!-- 로그인 css -->
     <link rel="stylesheet" type="text/css" href="css/member/login.css">
+    <!-- 로그인 js -->
+    <script src="js/member/login.js"></script>
 </head>
 <body>
     <div id="wrap">
         <div id="login_wrap">
-            <form action="login.jsp" method="post" id="login_form">
+            <form action="login.jsp" method="post" id="login_form" name="login_form">
                 <fieldset>
                     <div class="title">
                         <label for="id">아이디</label>
@@ -20,7 +23,7 @@
                         <label for="pwd">비밀번호</label>
                         <input type="password" id="pwd" name="pwd" placeholder="Password" required maxlength="20">
                     </div>
-                    <button type="submit" id="login">로그인</button>
+                    <button type="submit" id="login" onclick="loginCheck()">로그인</button>
                 </fieldset>
             </form>
             <hr>
