예약,결제 정보 페이지 class수정

--- a/stay_book.html
+++ b/stay_book.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <!--건너뛰기 링크-->
-    <a id="skipNav" href="#contentsArea">본문 바로가기</a>
+    <a id="skipNav" href="#contents_area">본문 바로가기</a>
     <!--건너뛰기 링크 종료-->
 
     <div id="wrapper">
@@ -39,7 +39,7 @@
         </header>
         <!--헤더 영역 종료-->
 
-        <div id="contentsArea" name="test">
+        <div id="contents_area" name="test">
             <div id="info">
                 <!-- 좌측 예약자 정보 란 -->
                 <div class="reserve_info">
