--- a/festival.html
+++ b/festival.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <!--건너뛰기 링크-->
-    <a id="skipNav" href="#contentsArea">본문 바로가기</a>
+    <a id="skipNav" href="#contents_area">본문 바로가기</a>
     <!--건너뛰기 링크 종료-->
 
     <main>
@@ -77,7 +77,7 @@
         <!-- 하단 축제  공연/전시 리스트 -->
         <!-- 축제 리스트 -->
         <div class="album py-5 bg-light" id="festival">
-            <div class="container" id="contentsArea">
+            <div class="container" id="contents_area">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                         <div class="card shadow-sm">
@@ -158,7 +158,7 @@
 
         <!-- 공연/전시 -->
         <div class="album py-5 bg-light" id="exhibition">
-            <div class="container" id="contentsArea">
+            <div class="container" id="contents_area">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                         <div class="card shadow-sm">
